Bug 794903 - Final version: BluetoothScoManager implementation, r=qdot